[gd_scene load_steps=9 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 27
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Backgrond" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="DisplayText" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Hello"
autowrap = true

[node name="PlayerInput" type="TextEdit" parent="."]
margin_left = 36.8299
margin_top = 509.333
margin_right = 889.83
margin_bottom = 575.333
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 2 )
text = "Input"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 908.79
margin_top = 508.947
margin_right = 994.79
margin_bottom = 574.947
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="PlayerBotton" type="Label" parent="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "OK"
align = 1
valign = 1
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
